try list style footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,12 @@
 <footer>
     
     <hr />
-    <div class="span1">&nbsp;</div>
-    <div class="span3">
-        <p align="center"><a href="/va-developer/legal/terms-of-use.html">Terms of Use</a></p>
-    </div>
-    <div class="span3">
-        <p align="center"><a href="/va-developer/legal/privacy-policy.html">Privacy Policy</a></p>
-    </div>
-    <div class="span3">
-        <p align="center"><a href="/va-developer/legal/branding-guidelines.html">Branding Guidelines</a></p>
-    </div>    
-    <div class="span1">&nbsp;</div                       
+    
+    <ul class="footer">
+        <li><a href="/va-developer/legal/terms-of-use.html">Terms of Use</a></li>
+        <li><a href="/va-developer/legal/privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="/va-developer/legal/branding-guidelines.html">Branding Guidelines</a></li>
+    </ul>    
 
 </footer>
     
