added legal footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     
     <hr />
     
-    <ul class="footer">
+    <ul class="legal">
         <li><a href="/va-developer/legal/terms-of-use.html">Terms of Use</a></li>
         <li><a href="/va-developer/legal/privacy-policy.html">Privacy Policy</a></li>
         <li><a href="/va-developer/legal/branding-guidelines.html">Branding Guidelines</a></li>
