moving most sections to folders, to keep easier to manage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
                     <li><a href="/va-developer/data/">Data</a></li>
                     <li><a href="/va-developer/code/">Code</a></li>
                     <li><a href="/va-developer/gallery/">Gallery</a></li>
-                    <li><a href="/va-developer/support.html">Support</a></li>
-                    <li><a href="/va-developer/roadmap.html">Roadmap</a></li>
+                    <li><a href="/va-developer/support/">Support</a></li>
+                    <li><a href="/va-developer/roadmap/">Roadmap</a></li>
                     <li><a href="/va-developer/blog/">Blog</a></li>
                 </ul>
             </div>
