--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4226,7 +4226,7 @@ input[type="submit"].btn.btn-mini {
   margin-bottom: 20px;
   margin-left: 0;
   list-style: none;
-  display: inline
+  display: inline;
   text-align: center;
 }
 
