--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4227,6 +4227,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: 0;
   list-style: none;
   text-align: center;
+  list-style-type: none;
 }
 
 .legal li {
