--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6182,3 +6182,19 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
+.toolbar{
+    float:right; 
+    padding-top: 10px;  
+}
+.toolbar li{
+    display: inline;
+    list-style: none;
+    padding-left: 2px;
+    padding-right: 2px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.toolbar li a{
+    color:#000;
+    font-size: 14px;
+} 
