--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,27 +5,31 @@
   {% include header.html %}
 
   <section>  
-
-  {{ content }}
-
-    <div class="row" align="center" style="padding-top: 10px; padding-botto: 10px;">
-        <div class="pagination">
-          <ul>
-          {% if page.previous %}
-            <li class="prev"><a href="http://kinlane.github.io/veterans-affairs/{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
-          {% else %}
-            <li class="prev disabled"><a>&larr; Previous</a></li>
-          {% endif %}
-            <li><a href="http://kinlane.github.io/veterans-affairs/blog/">Return to Main Blog Page</a></li>
-          {% if page.next %}
-            <li class="next"><a href="http://kinlane.github.io/veterans-affairs/{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
-          {% else %}
-            <li class="next disabled"><a>Next &rarr;</a>
-          {% endif %}
-          </ul>
+      
+      <div class="container">
+        
+          {{ content }}
+        
+            <div class="row" align="center" style="padding-top: 10px; padding-botto: 10px;">
+                <div class="pagination">
+                  <ul>
+                  {% if page.previous %}
+                    <li class="prev"><a href="http://kinlane.github.io/veterans-affairs/{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+                  {% else %}
+                    <li class="prev disabled"><a>&larr; Previous</a></li>
+                  {% endif %}
+                    <li><a href="http://kinlane.github.io/veterans-affairs/blog/">Return to Main Blog Page</a></li>
+                  {% if page.next %}
+                    <li class="next"><a href="http://kinlane.github.io/veterans-affairs/{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+                  {% else %}
+                    <li class="next disabled"><a>Next &rarr;</a>
+                  {% endif %}
+                  </ul>
+                </div>
+            </div>
+                
         </div>
-    </div>    
-    
+        
   </section>  
 
   {% include footer.html %}
