add sitemap to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
         <li><a href="/va-developer/legal/terms-of-use.html">Terms of Use</a></li>
         <li><a href="/va-developer/legal/privacy-policy.html">Privacy Policy</a></li>
         <li><a href="/va-developer/legal/branding-guidelines.html">Branding Guidelines</a></li>
+        <li><a href="/va-developer/sitemap.html">Sitemap</a></li>
     </ul>    
 
 </footer>
