clean up header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
                     <li class="active"><a href="/va-developer/">Home</a></li>
                     <li><a href="/va-developer/api/">APIs</a></li>
                     <li><a href="/va-developer/data/">Data</a></li>
-                    <li><a href="/va-developer/code/">Code</a></li>
+                    <!--<li><a href="/va-developer/code/">Code</a></li>
                     <li><a href="/va-developer/gallery/">Gallery</a></li>
                     <li><a href="/va-developer/support/">Support</a></li>
-                    <li><a href="/va-developer/roadmap/">Roadmap</a></li>
+                    <li><a href="/va-developer/roadmap/">Roadmap</a></li>--->
                     <li><a href="/va-developer/blog/">Blog</a></li>
                 </ul>
             </div>
